fix: overlapping header links with border bottom

--- a/src/_assets/styles/styles.scss
+++ b/src/_assets/styles/styles.scss
@@ -83,6 +83,14 @@ article {
 		margin-right: 2px;
 	}
 
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		line-height: 1.4;
+	}
+
 	h2 {
 		font-weight: 600;
 		padding-bottom: 3px;
